ProjetCompil/Verif/Test/fail/for1.cas
program
	A : real;
	B : 1..14;
begin
	for A := B to 20 do 
      		null ; 
  	end ; 
	
end.
	
